[tool.poetry]
name = "solstice-accounts-backend"
version = "0.1.0"
description = "This reposity contains the backend service for account-based services in Solstic, an 18+ Apple Exclusive social application. The primary purpose of this service to handle user related actions such as blocking, authentication, and friends/followings."
authors = ["JoshJarabek7 <jarabekjosh@icloud.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = {extras = ["email-validator"], version = "^2.7.4"}
pydantic-extra-types = "^2.8.2"
uvicorn = "^0.30.1"
beanie = "^1.26.0"
faststream = {extras = ["rabbit"], version = "^0.5.13"}


[tool.poetry.group.Dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
